objects/ASI_CRM_CustomerSubBrand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Sub-Brands</relationshipLabel>
        <relationshipName>ASI_CRM_CustomerSubBrand_Customer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalPromotionDetail__c</fullName>
        <label>Local Promotion Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalPromotionName__c</fullName>
        <label>Local Promotion Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PromotionDetails__c</fullName>
        <label>Promotion Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PromotionName__c</fullName>
        <label>Promotion Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubBrand__c</fullName>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Customers</relationshipLabel>
        <relationshipName>ASI_CRM_CustomerSubBrand_SubBrand</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Customer Sub-Brand</label>
    <nameField>
        <displayFormat>CSB-{YY}{000000}</displayFormat>
        <label>Customer Sub-Brand No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Sub-Brands</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_CustomerSubBrand</fullName>
        <active>true</active>
        <label>VN Customer Sub-Brand</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>